Fix: GitHub Actions 파일 경로 수정 - dist/src/generate-report.js

--- a/.github/workflows/reports.yml
+++ b/.github/workflows/reports.yml
@@ -82,4 +82,4 @@ jobs:
         GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
       run: |
         echo "Generating ${{ steps.report-type.outputs.type }} report..."
-        node dist/generate-report.js --type ${{ steps.report-type.outputs.type }}
+        node dist/src/generate-report.js --type ${{ steps.report-type.outputs.type }}
