--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Slack Configuration
 SLACK_BOT_TOKEN=xoxb-your-bot-token
 SLACK_CHANNEL_ID=C1234567890  # 채널 ID 입력
-SLACK_DM_USER_ID=U080BA70DC4  # 보고서 받을 사용자 ID
+SLACK_DM_USER_IDS=U080BA70DC4,U1234567890  # 보고서 받을 사용자 ID들 (쉼표로 구분)
 
 # Supabase Configuration
 SUPABASE_URL=https://your-project.supabase.co
