--- a/.github/workflows/reports.yml
+++ b/.github/workflows/reports.yml
@@ -85,7 +85,7 @@ jobs:
       env:
         SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         SLACK_CHANNEL_ID: ${{ secrets.SLACK_CHANNEL_ID }}
-        SLACK_DM_USER_ID: ${{ secrets.SLACK_DM_USER_ID }}
+        SLACK_DM_USER_IDS: ${{ secrets.SLACK_DM_USER_IDS }}
         SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
         SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
         GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
