fix: 빌드 경로 수정 - dist/src/generate-report.js → dist/generate-report.js
- 모든 워크플로우에서 잘못된 빌드 경로 수정
- 원래 작동하던 경로로 복원 (dist/generate-report.js)
- 이전 커밋에서 실수로 추가된 'src' 디렉토리 제거

--- a/.github/workflows/daily-report.yml
+++ b/.github/workflows/daily-report.yml
@@ -41,4 +41,4 @@ jobs:
         GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
       run: |
         echo "Generating daily report..."
-        node dist/src/generate-report.js --type daily
+        node dist/generate-report.js --type daily
