--- a/.github/workflows/weekly-report.yml
+++ b/.github/workflows/weekly-report.yml
@@ -60,4 +60,4 @@ jobs:
         GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
       run: |
         echo "Generating weekly report..."
-        node dist/src/generate-report.js --type weekly
+        node dist/generate-report.js --type weekly
