fix: 주간 보고서 워크플로우 조건 로직 개선
- 수동 실행(workflow_dispatch) 시 무조건 실행되도록 조건 추가
- 월간 보고서에 디버그 로깅 추가
- 디버그 단계 추가로 조건 검증 가능

--- a/.github/workflows/weekly-report.yml
+++ b/.github/workflows/weekly-report.yml
@@ -56,8 +56,16 @@ jobs:
           fi
         fi
     
+    - name: Debug step outputs
+      run: |
+        echo "=== Debug Information ==="
+        echo "Event name: ${{ github.event_name }}"
+        echo "is_first_monday output: ${{ steps.check-first-monday.outputs.is_first_monday }}"
+        echo "Condition result: ${{ steps.check-first-monday.outputs.is_first_monday == 'false' }}"
+        echo "========================"
+    
     - name: Generate weekly report
-      if: steps.check-first-monday.outputs.is_first_monday == 'false'
+      if: github.event_name == 'workflow_dispatch' || steps.check-first-monday.outputs.is_first_monday == 'false'
       env:
         SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         SLACK_CHANNEL_ID: ${{ secrets.SLACK_CHANNEL_ID }}
