debug: 모든 워크플로우에 빌드 출력 확인 단계 추가
🔍 디버깅 목적:
- 일간/월간/주간 보고서 모든 워크플로우에 빌드 확인 단계 추가
- dist/ 및 dist/src/ 폴더 구조 확인
- generate-report.js 파일 위치 찾기
- 일간/월간이 성공하는 경로와 주간이 실패하는 경로 비교 분석

이를 통해 정확한 빌드 경로를 파악할 수 있습니다.

--- a/.github/workflows/monthly-report.yml
+++ b/.github/workflows/monthly-report.yml
@@ -32,6 +32,14 @@ jobs:
     - name: Build project
       run: npm run build
     
+    - name: Check build output (Monthly)
+      run: |
+        echo "=== Monthly Report - Checking build output ==="
+        ls -la dist/ || echo "dist/ not found"
+        ls -la dist/src/ || echo "dist/src/ not found"
+        echo "Looking for generate-report.js..."
+        find . -name "generate-report.js" -type f
+    
     - name: Verify first Monday of month
       id: verify-schedule
       run: |
