--- a/.github/workflows/weekly-report.yml
+++ b/.github/workflows/weekly-report.yml
@@ -31,6 +31,14 @@ jobs:
     - name: Build project
       run: npm run build
     
+    - name: Check build output
+      run: |
+        echo "=== Checking build output ==="
+        ls -la dist/ || echo "dist/ not found"
+        ls -la dist/src/ || echo "dist/src/ not found"
+        echo "Looking for generate-report.js..."
+        find . -name "generate-report.js" -type f
+    
     - name: Verify first Monday of month
       id: verify-schedule
       run: |
