Add GitHub Actions workflows and complete camera report automation system

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
-/SuperClaude/
-/claudia/
+node_modules/
+dist/
+.env
+.env.local
+.env.production
+*.log
+.DS_Store
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.cache/
+credentials.json
+token.json
+google-credentials.json
