--- a/.github/workflows/daily-camera-report.yml
+++ b/.github/workflows/daily-camera-report.yml
@@ -13,6 +13,14 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
       
+    - name: Debug - Show directory structure
+      run: |
+        echo "Current directory: $(pwd)"
+        echo "Directory contents:"
+        ls -la
+        echo "TypeScript files in root:"
+        find . -name "*.ts" -not -path "./node_modules/*" -not -path "./dist/*" | head -20
+        
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
@@ -22,8 +30,16 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
+    - name: Debug - Check tsconfig.json
+      run: |
+        echo "tsconfig.json contents:"
+        cat tsconfig.json
+        
     - name: Build project
-      run: npm run build
+      run: |
+        echo "Starting build..."
+        npm run build
+        echo "Build completed"
       
     - name: Generate camera report
       timeout-minutes: 10
