--- a/.github/workflows/daily-camera-report.yml
+++ b/.github/workflows/daily-camera-report.yml
@@ -8,38 +8,26 @@ on:
 jobs:
   generate-report:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ github.workspace }}
     
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
       
-    - name: Debug - Show directory structure
-      run: |
-        echo "Current directory: $(pwd)"
-        echo "Directory contents:"
-        ls -la
-        echo "TypeScript files in root:"
-        find . -name "*.ts" -not -path "./node_modules/*" -not -path "./dist/*" | head -20
-        
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '18'
         cache: 'npm'
+        cache-dependency-path: package-lock.json
         
     - name: Install dependencies
       run: npm ci
       
-    - name: Debug - Check tsconfig.json
-      run: |
-        echo "tsconfig.json contents:"
-        cat tsconfig.json
-        
     - name: Build project
-      run: |
-        echo "Starting build..."
-        npm run build
-        echo "Build completed"
+      run: npm run build
       
     - name: Generate camera report
       timeout-minutes: 10
