--- a/.github/workflows/retry-camera-report.yml
+++ b/.github/workflows/retry-camera-report.yml
@@ -10,6 +10,9 @@ jobs:
   retry-on-failure:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'failure' }}
+    defaults:
+      run:
+        working-directory: ${{ github.workspace }}
     
     steps:
     - name: Wait before retry
@@ -26,6 +29,7 @@ jobs:
       with:
         node-version: '18'
         cache: 'npm'
+        cache-dependency-path: package-lock.json
         
     - name: Install dependencies
       run: npm ci
